--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
 Pu'u-o-Manoa-App/Library/
+Pu'u-o-Manoa-App/Temp/
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
