fixed file paths!
fixed file pathing so it works in the terminal once you install the RHCCCore as a package and added saving the model config for loading later. Also added requireoements.

--- a/.gitignore
+++ b/.gitignore
@@ -77,9 +77,10 @@ crashlytics-build.properties
 
 ./Library/artifacts/*
 
-# PyCharm Settings
-.idea
-
-# library
-ml_backend/RHCCCore/RHCCCore.egg-info/*
+# ml backend
+*.idea
 *.swp
+ml_backend/RHCCCore/RHCCCore.egg-info/*
+*.egg-info
+*.pyc
+ml_backend/models/*
