better interpret script

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,5 @@ ml_backend/RHCCCore/RHCCCore.egg-info/*
 *.pyc
 ml_backend/models/*
 !ml_backend/models/model_clear.py
+ml_backend/test_images/*
+!ml_backend/test_images/image_clear.py
